--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,7 +18,7 @@ koinAndroidxCompose = "3.4.3"
 firebase-kotlin = "1.8.0"
 
 coroutines = "1.7.0-Beta"
-
+kotlinx-datetime = "0.4.0"
 serialization = "1.5.0"
 
 sqldelight = "2.0.0-alpha05"
@@ -49,9 +49,9 @@ koin-androidx-compose = { group = "io.insert-koin", name = "koin-androidx-compos
 # Firebase
 firebase-kotlin-auth = { group = "dev.gitlive", name = "firebase-auth", version.ref = "firebase-kotlin" }
 firebase-kotlin-firestore = { group = "dev.gitlive", name = "firebase-firestore", version.ref = "firebase-kotlin" }
-# Coroutines
+# Jetbrains
 coroutines = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutines" }
-# Serialization
+kotlinx-datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime", version.ref = "kotlinx-datetime" }
 serialization = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "serialization" }
 # SqlDelight
 sqldelight-driver-android = { group = "app.cash.sqldelight", name = "android-driver", version.ref = "sqldelight" }
